# hexchat

./: .editorconfig  .gitignore  .lgtm.yml  .mailmap  .organizationmap  .travis.yml  COPYING  COPYING.rtf  ChangeLog  Config  Doxyfile  HACKING  INSTALL  INSTALL.w32  Makefile.am  Makefile.in  README  README_FIRST  aclocal.m4  appveyor.yml  autogen.sh  build_osx.sh  changelog.md  config-win32.h  config-win32.h.tt  config.h  config.h.in  config.h.w32  configure  configure.ac  configure.in  faq.html  faq.md  fedora-mingw64.ini  glibconfig.h.patch  hexchat.desktop  hexchat.spec  meson.build  meson_options.txt  meson_post_install.py  (+9 more)
data/icons/: Makefile.am  meson.build
data/misc/: Makefile.am  hexchat.appdata.xml  hexchat.appdata.xml.in  hexchat.desktop.in  hexchat.desktop.in.in  htm.desktop.in  io.github.Hexchat.Plugin.metainfo.xml.in  io.github.Hexchat.ThemeManager.desktop.in  io.github.Hexchat.ThemeManager.xml  io.github.Hexchat.appdata.xml.in  io.github.Hexchat.desktop.in.in  meson.build
data/pkgconfig/: Makefile.am  meson.build
plugins/: Make.plugin  Makefile.am  Makefile.in  makefile.mak  meson.build  plugin-conf.in  plugin20.html  xchat-plugin.h
plugins/checksum/: Makefile.am  checksum-xp.vcxproj  checksum-xp.vcxproj.filters  checksum.c  checksum.def  checksum.vcxproj  makefile.mak  meson.build
plugins/dbus/: Makefile.am  README  apps_xchat_url_handler.schemas  dbus-plugin.c  dbus-plugin.xml  example.c  marshallers.list  xchat-remote.c
plugins/dns/: dns-xp.vcxproj  dns.c  dns.vcxproj  dns.vcxproj.filters  makefile.mak  plugin-dns.c  thread.c  thread.h
plugins/doat/: Makefile.am  doat-xp.vcxproj  doat.c  doat.vcxproj  doat.vcxproj.filters  makefile.mak
plugins/ewc/: ewc.c  makefile.mak
plugins/exec/: exec-xp.vcxproj  exec.c  exec.vcxproj  exec.vcxproj.filters  makefile.mak  meson.build
plugins/fishlim/: DH1080Wrapper.cpp  DH1080Wrapper.h  INSTALL  LICENSE  Makefile  Makefile.am  README  base64.c  base64.h  bool.h  dh1080.c  dh1080.h  fish.c  fish.h  fishlim-xp.vcxproj  fishlim-xp.vcxproj.filters  fishlim.vcxproj  fishlim.vcxproj.filters  irc.c  irc.h  keystore.c  keystore.h  makefile.mak  meson.build  misc.c  misc.h  plugin_hexchat.c  plugin_hexchat.h  plugin_xchat.c  plugin_xchat.h  test.c  utils.c  utils.h  xchat_plugin.c
plugins/gtkpref/: gtkpref.c  makefile.mak
plugins/hextray/: callbacks.cpp  callbacks.h  hexchat.cpp  hexchat.h  hextray-xp.vcxproj  hextray-xp.vcxproj.filters  hextray.cpp  hextray.h  hextray.vcxproj  resource.h  resource.rc  sdAlerts.cpp  sdAlerts.h  sdTray.cpp  sdTray.h  utility.cpp  utility.h  xchat.cpp  xtray.cpp  xtray.def  xtray.h
plugins/lua/: Makefile.am  lua-xp.vcxproj  lua-xp.vcxproj.filters  lua.c  lua.vcxproj  lua.vcxproj.filters  makefile.mak  meson.build
plugins/mailcheck/: Makefile.am  mailcheck.c
plugins/mpcinfo/: Install.bat  build.bat  functions.c  makefile.mak  mp3Info.c  mpcInfo.c  mpc_info.dev  mpcinfo-xp.vcxproj  mpcinfo.vcxproj  mpcinfo.vcxproj.filters  oggInfo.c  plugin.def  theme.c
plugins/nonbmp/: makefile.mak  nonbmp.c
plugins/perl/: IRC.pm  Makefile.am  Makefile.in  Xchat.pm  Xchat.pod  alt_completion.pl  char_count.pl  dp_misc.pl  generate_header  generate_header.py  generate_html  ignore.pl  makefile-510.mak  makefile-512.mak  makefile-514.mak  makefile-58.mak  makefile.mak  meson.build  perl-512-xp.vcxproj  perl-512-xp.vcxproj.filters  perl-512.vcxproj  perl-514-xp.vcxproj  perl-514.vcxproj  perl-516-xp.vcxproj  perl-516.vcxproj  perl-518.vcxproj  perl.c  perl.def  perl.vcxproj  perl.vcxproj.filters  perl512.def  sample_script.pl  syntax_highlight  xchat2-perl.html  xchat2-perldocs.html  xchatdox2.html  xcperl_build.bat
plugins/python/: Makefile.am  Makefile.in  _hexchat.py  generate_plugin.py  makefile.mak  meson.build  python-xp.vcxproj  python.c  python.def  python.py  python.vcxproj  python.vcxproj.filters  python2.vcxproj  python3.vcxproj  python3.vcxproj.filters  python_style_guide.md  xchat.py
plugins/sasl/: Makefile.am  sasl-xp.vcxproj  sasl-xp.vcxproj.filters  sasl.c  sasl.vcxproj
plugins/sysinfo/: Makefile.am  format.c  format.h  hwmon.c  hwmon.h  match.c  match.h  meson.build  parse.c  parse.h  pci.c  pci.h  sysinfo-backend.h  sysinfo-xp.vcxproj  sysinfo-xp.vcxproj.filters  sysinfo.c  sysinfo.cpp  sysinfo.h  sysinfo.vcxproj  sysinfo.vcxproj.filters  xsys-changelog  xsys-install  xsys-makefile  xsys-readme  xsys.c  xsys.h
plugins/tcl/: Makefile.am  Makefile.in  README  makefile.mak  printevents.h  tcl-xp.vcxproj  tcl.vcxproj  tcl.vcxproj.filters  tclplugin.c  tclplugin.h
plugins/upd/: Resource.rc  makefile.mak  meson.build  upd-xp.vcxproj  upd-xp.vcxproj.filters  upd.c  upd.cpp  upd.vcxproj  upd.vcxproj.filters
plugins/winamp/: makefile.mak  meson.build  winamp-xp.vcxproj  winamp.c  winamp.vcxproj  winamp.vcxproj.filters
plugins/winsys/: makefile.mak  winsys-xp.vcxproj  winsys.c  winsys.cpp  winsys.vcxproj
plugins/wmpa/: ReadMe.txt  StdAfx.cpp  StdAfx.h  hexchat-plugin.cpp  hexchat-plugin.h  makefile.mak  resource.h  wmpa-xp.vcxproj  wmpa.clw  wmpa.cpp  wmpa.def  wmpa.dsp  wmpa.dsw  wmpa.h  wmpa.odl  wmpa.plg  wmpa.rc  wmpa.sln  wmpa.vcxproj  wmpa.vcxproj.filters  wmpadialog.cpp  wmpadialog.h  wmpcdrom.cpp  wmpcdrom.h  wmpcdromcollection.cpp  wmpcdromcollection.h  wmpclosedcaption.cpp  wmpclosedcaption.h  wmpcontrols.cpp  wmpcontrols.h  wmpdvd.cpp  wmpdvd.h  wmperror.cpp  wmperror.h  wmperroritem.cpp  wmperroritem.h  wmpmedia.cpp  wmpmedia.h  wmpmediacollection.cpp  wmpmediacollection.h  (+18 more)
plugins/xdcc/: Makefile.am  makefile.mak  xdcc.c
plugins/xsasl/: makefile.mak  xsasl.c  xsasl.vcxproj  xsasl.vcxproj.filters
plugins/xtray/: callbacks.cpp  callbacks.h  makefile.mak  plugin.h  resource.rc  sdAlerts.h  sdTray.cpp  sdTray.h  utility.cpp  utility.h  xchat.cpp  xtray.cpp  xtray.h  xtray.vcxproj  xtray.vcxproj.filters
plugins/znc/: Makefile.am  znc.c
share/misc/: Makefile.am  hexchat.appdata.xml  hexchat.desktop  hexchat.spec  htm-mime.xml  htm.desktop
share/sounds/: Makefile.am
src/common/: Makefile.am  Makefile.in  cfgfiles.c  cfgfiles.cpp  cfgfiles.h  chanopt.c  (+127 more)
(+513 files in other folders)
