## Process this file with automake to produce Makefile.in

SUBDIRS = po intl src plugins

EXTRA_DIST = autogen.sh HACKING INSTALL.w32 faq.html hexchat.png \
		hexchat.desktop hexchat.spec hexchat.ico

icon_DATA = hexchat.png
icondir = $(datadir)/pixmaps

util_DATA = hexchat.desktop
utildir = $(datadir)/applications

ACLOCAL_AMFLAGS = -I m4
